@@ -161,6 +161,47 @@ describe 'Rufus::Tokyo::Tyrant lget/lput/ldelete' do
   end
 end
 
+describe 'Rufus::Tokyo::Tyrant#add{int|double}' do
+
+  before do
+    @db = Rufus::Tokyo::Tyrant.new('127.0.0.1', 45000)
+    @db.clear
+  end
+  after do
+    @db.close
+  end
+
+  it 'should increment (int)' do
+
+    @db.addint('counter', 1).should.equal(1)
+    @db.int_incr('counter', 1).should.equal(2)
+    @db.addint('counter', 2).should.equal(4)
+  end
+
+  it 'should fail gracefully if counter has already a [string] value (int)' do
+
+    @db['counter'] = 'a'
+    lambda { @db.addint('counter', 1) }.should.raise(Rufus::Tokyo::TokyoError)
+    @db['counter'].should.equal('a')
+  end
+
+  it 'should increment (double)' do
+
+    @db.adddouble('counter', 1.0).should.equal(1.0)
+    @db.double_incr('counter', 1.5).should.equal(2.5)
+    @db.adddouble('counter', 2.2).should.equal(4.7)
+  end
+
+  it 'should fail gracefully if counter has already a [string] value (double)' do
+
+    @db['counter'] = 'a'
+    lambda {
+      @db.adddouble('counter', 1.0)
+    }.should.raise(Rufus::Tokyo::TokyoError)
+    @db['counter'].should.equal('a')
+  end
+end
+
 describe 'Rufus::Tokyo::Tyrant (lua extensions)' do
 
   before do
